--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,13 @@
-#root {
+/* #root {
   height: 100%;
   width: 100%;
+} */
+
+body {
+  overflow: hidden;
 }
 
-.logo {
+/* .logo {
   height: 6em;
   padding: 1.5em;
   will-change: filter;
@@ -29,4 +33,4 @@
   a:nth-of-type(2) .logo {
     animation: logo-spin infinite 20s linear;
   }
-}
+} */
